[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/eop/EoPMiniGameLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/eop/eop.gd" type="Script" id=3]
[ext_resource path="res://font/bold_font_medium_overlay.tres" type="DynamicFont" id=4]
[ext_resource path="res://font/bold_font_big.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=40]
resource_name = "Fade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="EoPMiniGame" type="WindowDialog"]
margin_right = 1500.0
margin_bottom = 1000.0
rect_min_size = Vector2( 1500, 1000 )
window_title = "Find Cups"
script = ExtResource( 3 )

[node name="GameStartNode" type="Node2D" parent="."]
modulate = Color( 0.9375, 0.9375, 0.9375, 0.9375 )
position = Vector2( -17, 116 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameStartNode"]
root_node = NodePath("../Display")
anims/Fade = SubResource( 40 )
anims/RESET = SubResource( 41 )

[node name="Display" type="RichTextLabel" parent="GameStartNode"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 17.0
margin_top = -97.0
margin_right = 1517.0
margin_bottom = 329.0
rect_min_size = Vector2( 1500, 0 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]We're almost there. Catch the cup!
Press START to start the chase![/center]"
text = "We're almost there. Catch the cup!
Press START to start the chase!"

[node name="Button" type="Button" parent="GameStartNode"]
margin_left = 700.0
margin_top = 300.0
margin_right = 900.0
margin_bottom = 370.0
rect_min_size = Vector2( 200, 70 )
custom_fonts/font = ExtResource( 5 )
text = "START"

[node name="ViewportLevel" type="ViewportContainer" parent="."]
visible = false
margin_right = 1500.0
margin_bottom = 995.0
rect_min_size = Vector2( 1500, 995 )

[node name="Viewport" type="Viewport" parent="ViewportLevel"]
size = Vector2( 1500, 1000 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 0

[node name="Level" parent="ViewportLevel/Viewport" instance=ExtResource( 2 )]
visible = false

[connection signal="hide" from="." to="." method="_on_EoPMiniGame_hide"]
[connection signal="pressed" from="GameStartNode/Button" to="." method="_on_GameStart_pressed"]
[connection signal="game_lost" from="ViewportLevel/Viewport/Level" to="." method="_on_Level_game_lost"]
[connection signal="game_won" from="ViewportLevel/Viewport/Level" to="." method="_on_Level_game_won"]
